--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status": "^2.0.0",
+    "http-status-codes": "^2.3.0",
     "http-status-ts": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
